--- a/styles.css
+++ b/styles.css
@@ -86,8 +86,7 @@ ul li.checked{
 }
 
 ul li.checked::before{
-    background-image: url('check-mark.png');
-    /* background-size: 15px; */
+    background-image: url('/images/checked.png');
 }
 
 ul li span{
